@@ -9,10 +9,20 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javafx.path>/Users/rocky/.m2/repository/org/openjfx</javafx.path>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>javafx-repo</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
+
+
 
     <dependencies>
         <!-- WildFly JAX-RS Client dependencies -->
@@ -47,14 +57,22 @@
 
     <build>
         <plugins>
+            <!-- JavaFX Maven Plugin -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>kun.FileShareClient</mainClass>
+                    <options>
+                        <option>--module-path</option>
+                        <option>${javafx.path}</option>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml</option>
+                    </options>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 </project>
